# rust_fizz_buzz

./: Benchmark.ps1  Cargo.toml  README.adoc
benches/: fizz_buzz_benchmark.rs
src/: lib.rs  main.rs
src/math/: mod.rs
tests/: fizz_buzz_use_case.rs
