[package]
name = "fizz_buzz"
version = "0.1.0"
authors = ["Kamil Duda <kamilduda01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "fizz_buzz_benchmark"
harness = false